--- a/Static Html Lib/details pages/details.html
+++ b/Static Html Lib/details pages/details.html
@@ -12,10 +12,17 @@
 </head>
 <body>
     <div class="container planetinfo">
-        <div class="row">
-            <div class="col-sm-12">
-                <h1 class="planettitle" >The Sun</h1>
-            </div>
+            <div class="row">
+                <div class="col-sm-6">
+                    <img src="sunpic.png" class="img-thumbnail" alt="" title="">
+                </div>
+                <div class="col-sm-6">
+                    <div class="subtitle">
+                        <h3 id="sun">The Sun</h3>
+                    </div>
+                    <div class="facts"></div>
+                </div>
+                
 
         </div>
     </div>
