--- a/Static Html Lib/details pages/details.html
+++ b/Static Html Lib/details pages/details.html
@@ -8,19 +8,20 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="det.css">
     <title>Document</title>
 </head>
 <body>
     <div class="container planetinfo">
             <div class="row">
                 <div class="col-sm-6">
-                    <img src="sunpic.png" class="img-thumbnail" alt="" title="">
+                    <img src="bright-sun.png" class="img-thumbnail" alt="" title="">
                 </div>
                 <div class="col-sm-6">
                     <div class="subtitle">
                         <h3 id="sun">The Sun</h3>
                     </div>
-                    <div class="facts"></div>
+                    <div class="facts">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Adipisci voluptatem soluta excepturi, doloribus quos velit ad reiciendis vitae minus rerum optio odit asperiores nihil a fugit aspernatur maiores illum eum.</div>
                 </div>
                 
 
