--- a/Static Html Lib/mango/index.html
+++ b/Static Html Lib/mango/index.html
@@ -8,9 +8,40 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
-    <title>Home Page</title>
+    <link rel="stylesheet" href="./index.css">
+    <title>Planets</title>
 </head>
 <body>
-    
+    <div class="container-fluid">
+        <!--Navigation Bar-->
+        <div class="row">
+            <div class="col-lg-12 bg-dark p-3 text-center text-white">
+                <nav>
+                    <a class="text-white" href="">Planets</a>
+                    <a class="text-white" href="">Stars</a>
+                    <div class="btn-group">
+                       
+                    </div>
+                </nav>
+            </div>
+        </div>
+        <!--Planets-->
+        <div class="row ">
+            <div class="col-lg-12 position-absolute" style="top: 0;">
+                <div class="solar-system-container">
+                    <div class="planets-container"><div class="planets-nav planet-1"></div></div>
+                    <div class="planets-container"><div class="planets-nav planet-2"></div></div>
+                    <div class="planets-container"><div class="planets-nav planet-3"></div></div>
+                    <div class="planets-container"><div class="planets-nav planet-4"></div></div>
+                    <div class="planets-container"><div class="planets-nav planet-5"></div></div>
+                    <div class="planets-container"><div class="planets-nav planet-6"></div></div>
+                    <div class="planets-container"><div class="planets-nav planet-7"></div></div>
+                    <div class="planets-container"><div class="planets-nav planet-8"></div></div>
+                    <div class="planets-container"><div class="planets-nav planet-9"></div></div>
+                    <div class="planets-container"><div class="planets-nav planet-10"></div></div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
