--- a/Static Html Lib/details pages/details.html
+++ b/Static Html Lib/details pages/details.html
@@ -15,16 +15,34 @@
     <div class="container planetinfo">
             <div class="row">
                 <div class="col-sm-6">
-                    <img src="bright-sun.png" class="img-thumbnail" alt="" title="">
+                    <img src="bright-sun.png" class="planet" alt="" title="">
                 </div>
                 <div class="col-sm-6">
                     <div class="subtitle">
-                        <h3 id="sun">The Sun</h3>
+                        <h3>The Sun</h3>
                     </div>
-                    <div class="facts">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Adipisci voluptatem soluta excepturi, doloribus quos velit ad reiciendis vitae minus rerum optio odit asperiores nihil a fugit aspernatur maiores illum eum.</div>
+                    <div class="facts"><p> Sun is a 4.5 billion-year-old star – a hot glowing ball of hydrogen and helium at the center of our solar system. 
+                        The Sun is about 150 million kilometers from Earth, and without its energy, life as we know it could not exist here on our home planet.</p>
+                        <p>
+                        The Sun is the largest object in our solar system. The Sun’s volume would need 1.3 million Earths to fill it. 
+                        Its gravity holds the solar system together, keeping everything from the biggest planets to the smallest bits of debris in orbit around it. 
+                        The hottest part of the Sun is its core, where temperatures top 15 million degrees Celsius. 
+                        The Sun’s activity, from its powerful eruptions to the steady stream of charged particles it sends out, 
+                        influences the nature of space throughout the solar system.</p>
+                    
+                        <p> NASA and other international space agencies monitor the Sun 24/7 with a fleet of spacecraft, 
+                        studying everything from its atmosphere to its surface, and even peering inside the Sun using special instruments. 
+                        Sun-exploring spacecraft include Parker Solar Probe, Solar Orbiter, SOHO, ACE, IRIS, WIND, Hinode, Solar Dynamics Observatory, 
+                        and STEREO.</p>
+                        </div>
                 </div>
                 
 
+        </div>
+        <div class="row">
+            <div class="col-sm-12">
+                <img src="sun-structure.png" class="structure" alt="">
+            </div>
         </div>
     </div>
 </body>
