--- a/Static Html Lib/details pages/details.html
+++ b/Static Html Lib/details pages/details.html
@@ -15,13 +15,13 @@
     <div class="container planetinfo">
             <div class="row">
                 <div class="col-sm-6">
-                    <img src="bright-sun.png" class="planet" alt="" title="">
+                    <img src="bright-sun.png" class="detail-planet" alt="" title="">
                 </div>
                 <div class="col-sm-6">
-                    <div class="subtitle">
+                    <div class="detail-subtitle">
                         <h3>The Sun</h3>
                     </div>
-                    <div class="facts"><p> Sun is a 4.5 billion-year-old star – a hot glowing ball of hydrogen and helium at the center of our solar system. 
+                    <div class="detail-text"><p> Sun is a 4.5 billion-year-old star – a hot glowing ball of hydrogen and helium at the center of our solar system. 
                         The Sun is about 150 million kilometers from Earth, and without its energy, life as we know it could not exist here on our home planet.</p>
                         <p>
                         The Sun is the largest object in our solar system. The Sun’s volume would need 1.3 million Earths to fill it. 
@@ -40,9 +40,21 @@
 
         </div>
         <div class="row">
-            <div class="col-sm-12">
-                <img src="sun-structure.png" class="structure" alt="">
+            <div class="col-sm-6">
+                <img src="sun-structure.png" class="detail-structure" alt="">
             </div>
+            <div class="col-sm-6">
+                <div class="detail-subtitle">
+                    <h4>Facts</h4>
+                </div>
+                <div class="detail-facts">
+                    <p>The Sun accounts for 99.86% of the mass in the solar system.<br>
+                        Over one million Earth's could fit inside the Sun.<br>
+                        One day the Sun will consume the Earth.<br>
+                        The energy created by the Sun's core is nuclear fusion.<br>
+                        The Sun is almost a perfect sphere.<br>
+                        The Sun is travelling at 220 km per second.</p>
+                    </div>
         </div>
     </div>
 </body>
