--- a/Static Html Lib/details pages/details.html
+++ b/Static Html Lib/details pages/details.html
@@ -15,6 +15,7 @@
     <div class="container planetinfo">
             <div class="row">
                 <div class="col-sm-6">
+                    <!--main planet png-->
                     <img src="bright-sun.png" class="detail-planet" alt="" title="">
                 </div>
                 <div class="col-sm-6">
@@ -41,6 +42,7 @@
         </div>
         <div class="row">
             <div class="col-sm-6">
+                <!--planet structure png-->
                 <img src="sun-structure.png" class="detail-structure" alt="">
             </div>
             <div class="col-sm-6">
