--- a/Static Html Lib/mango/index.html
+++ b/Static Html Lib/mango/index.html
@@ -29,16 +29,16 @@
         <div class="row position-relative">
             <div class="col-lg-12 position-absolute" style="top: 0;">
                 <div class="solar-system-container">
-                    <div class="planets-container"><div class="planets-nav planet-1"><img src="./Images/bright-sun.png" alt=""></div></div>
-                    <div class="planets-container"><div class="planets-nav planet-2"><img src="./Images/mercury.png" alt=""></div></div>
-                    <div class="planets-container"><div class="planets-nav planet-3"><img src="./Images/venus.png" alt=""></div></div>
-                    <div class="planets-container"><div class="planets-nav planet-4"><img src="./Images/earth.png" alt=""></div></div>
-                    <div class="planets-container"><div class="planets-nav planet-5"><img src="./Images/mars.png" alt=""></div></div>
-                    <div class="planets-container"><div class="planets-nav planet-6"><img src="./Images/jupiter.png" alt=""></div></div>
-                    <div class="planets-container"><div class="planets-nav planet-7"><img src="./Images/saturn.png" alt=""></div></div>
-                    <div class="planets-container"><div class="planets-nav planet-8"><img src="./Images/uranus.png" alt=""></div></div>
-                    <div class="planets-container"><div class="planets-nav planet-9"><img src="./Images/neptune.png" alt=""></div></div>
-                    <div class="planets-container"><div class="planets-nav planet-10"><img src="./Images/neptune.png" alt=""></div></div>
+                    <div class="planets-container"><div class="planets-nav planet-1"><img src="./Planets/sun.png" alt=""></div></div>
+                    <div class="planets-container"><div class="planets-nav planet-2"><img src="./Planets/mercury.png" alt=""></div></div>
+                    <div class="planets-container"><div class="planets-nav planet-3"><img src="./Planets/venus.png" alt=""></div></div>
+                    <div class="planets-container"><div class="planets-nav planet-4"><img src="./Planets/earth.png" alt=""></div></div>
+                    <div class="planets-container"><div class="planets-nav planet-5"><img src="./Planets/mars.png" alt=""></div></div>
+                    <div class="planets-container"><div class="planets-nav planet-6"><img src="./Planets/jupiter.png" alt=""></div></div>
+                    <div class="planets-container"><div class="planets-nav planet-7"><img src="./Planets/saturn.png" alt=""></div></div>
+                    <div class="planets-container"><div class="planets-nav planet-8"><img src="./Planets/uranus.png" alt=""></div></div>
+                    <div class="planets-container"><div class="planets-nav planet-9"><img src="./Planets/neptune.png" alt=""></div></div>
+                    <div class="planets-container"><div class="planets-nav planet-10"><img src="./Planets/pluto.png" alt=""></div></div>
                 </div>
             </div>
         </div>
