--- a/Static Html Lib/szabolcs/Stardust/stardust.html
+++ b/Static Html Lib/szabolcs/Stardust/stardust.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <!--Container for the stars-->
-    <div id="stardust-container" onload="mouse_position()">
+    
+    <div id="stardust-container" onload="onMouseUpdate()">
 
     </div>
     <script src="stardust.js"></script>
