solar system scale

--- a/Static Html Lib/mango/index.html
+++ b/Static Html Lib/mango/index.html
@@ -29,16 +29,16 @@
         <div class="row position-relative">
             <div class="col-lg-12 position-absolute" style="top: 0;">
                 <div class="solar-system-container">
-                    <div class="planets-container"><div class="planets-nav planet-1"><img src="./Planets/sun.png" alt=""></div></div>
-                    <div class="planets-container"><div class="planets-nav planet-2"><img src="./Planets/mercury.png" alt=""></div></div>
-                    <div class="planets-container"><div class="planets-nav planet-3"><img src="./Planets/venus.png" alt=""></div></div>
-                    <div class="planets-container"><div class="planets-nav planet-4"><img src="./Planets/earth.png" alt=""></div></div>
-                    <div class="planets-container"><div class="planets-nav planet-5"><img src="./Planets/mars.png" alt=""></div></div>
-                    <div class="planets-container"><div class="planets-nav planet-6"><img src="./Planets/jupiter.png" alt=""></div></div>
-                    <div class="planets-container"><div class="planets-nav planet-7"><img src="./Planets/saturn.png" alt=""></div></div>
-                    <div class="planets-container"><div class="planets-nav planet-8"><img src="./Planets/uranus.png" alt=""></div></div>
-                    <div class="planets-container"><div class="planets-nav planet-9"><img src="./Planets/neptune.png" alt=""></div></div>
-                    <div class="planets-container"><div class="planets-nav planet-10"><img src="./Planets/pluto.png" alt=""></div></div>
+                    <div class="planets-container pc-1"><div class="planets-nav planet-1"><img src="./Planets/sun.png" alt=""></div></div>
+                    <div class="planets-container pc-2"><div class="planets-nav planet-2"><img src="./Planets/mercury.png" alt=""></div></div>
+                    <div class="planets-container pc-3"><div class="planets-nav planet-3"><img src="./Planets/venus.png" alt=""></div></div>
+                    <div class="planets-container pc-4"><div class="planets-nav planet-4"><img src="./Planets/earth.png" alt=""></div></div>
+                    <div class="planets-container pc-5"><div class="planets-nav planet-5"><img src="./Planets/mars.png" alt=""></div></div>
+                    <div class="planets-container pc-6"><div class="planets-nav planet-6"><img src="./Planets/jupiter.png" alt=""></div></div>
+                    <div class="planets-container pc-7"><div class="planets-nav planet-7"><img src="./Planets/saturn.png" alt=""></div></div>
+                    <div class="planets-container pc-8"><div class="planets-nav planet-8"><img src="./Planets/uranus.png" alt=""></div></div>
+                    <div class="planets-container pc-9"><div class="planets-nav planet-9"><img src="./Planets/neptune.png" alt=""></div></div>
+                    <div class="planets-container pc-10"><div class="planets-nav planet-10"><img src="./Planets/pluto.png" alt=""></div></div>
                 </div>
             </div>
         </div>
@@ -49,6 +49,7 @@
                     <div class="planet-titles">Mercury</div>
                     <div class="planet-titles">Venus</div>
                     <div class="planet-titles">Earth</div>
+                    <div class="planet-titles">Moon</div>
                     <div class="planet-titles">Mars</div>
                     <div class="planet-titles">Jupiter</div>
                     <div class="planet-titles">Saturn</div>
