--- a/Static Html Lib/details pages/details.html
+++ b/Static Html Lib/details pages/details.html
@@ -19,7 +19,7 @@
                     <img src="bright-sun.png" class="detail-planet" alt="" title="">
                 </div>
                 <div class="col-sm-6">
-                    <div class="detail-subtitle">
+                    <div class="detail-text-subtitle">
                         <h3>The Sun</h3>
                     </div>
                     <div class="detail-text"><p> Sun is a 4.5 billion-year-old star – a hot glowing ball of hydrogen and helium at the center of our solar system. 
@@ -46,10 +46,11 @@
                 <img src="sun-structure.png" class="detail-structure" alt="">
             </div>
             <div class="col-sm-6">
-                <div class="detail-subtitle">
+                <div class="detail-facts-subtitle">
                     <h4>Facts</h4>
                 </div>
                 <div class="detail-facts">
+            
                     <p>The Sun accounts for 99.86% of the mass in the solar system.<br>
                         Over one million Earth's could fit inside the Sun.<br>
                         One day the Sun will consume the Earth.<br>
