--- a/Static Html Lib/details pages/details.html
+++ b/Static Html Lib/details pages/details.html
@@ -50,13 +50,14 @@
                     <h4>Facts</h4>
                 </div>
                 <div class="detail-facts">
-            
-                    <p>The Sun accounts for 99.86% of the mass in the solar system.<br>
-                        Over one million Earth's could fit inside the Sun.<br>
-                        One day the Sun will consume the Earth.<br>
-                        The energy created by the Sun's core is nuclear fusion.<br>
-                        The Sun is almost a perfect sphere.<br>
-                        The Sun is travelling at 220 km per second.</p>
+                    <ul>
+                        <li>Sun accounts for 99.86% of the mass in the solar system.</li>
+                        <li>Over one million Earth's could fit inside the Sun.</li>
+                        <li>One day the Sun will consume the Earth.</li>
+                        <li>The energy created by the Sun's core is nuclear fusion.</li>
+                        <li>The Sun is almost a perfect sphere.</li>
+                        <li>The Sun is travelling at 220 km per second.</li>
+                    </ul>
                     </div>
         </div>
     </div>
