--- a/Static Html Lib/mango/index.html
+++ b/Static Html Lib/mango/index.html
@@ -28,8 +28,9 @@
         <!--Planets-->
         <div class="row position-relative">
             <div class="col-lg-12 position-absolute" style="top: 0;">
+                <!--
                 <div class="solar-system-container">
-                    <div class="planets-container pc-1"><div class="planets-nav planet-1"><img src="./Planets/sun.png" alt=""></div></div>
+                    <div class="planets-container pc-1"><div class="planets-nav planet-1"><img src="./Planets/sun.png" onclick="Alert('I am the sun')" alt=""></div></div>
                     <div class="planets-container pc-2"><div class="planets-nav planet-2"><img src="./Planets/mercury.png" alt=""></div></div>
                     <div class="planets-container pc-3"><div class="planets-nav planet-3"><img src="./Planets/venus.png" alt=""></div></div>
                     <div class="planets-container pc-4"><div class="planets-nav planet-4"><img src="./Planets/earth.png" alt=""></div></div>
@@ -40,25 +41,45 @@
                     <div class="planets-container pc-9"><div class="planets-nav planet-9"><img src="./Planets/neptune.png" alt=""></div></div>
                     <div class="planets-container pc-10"><div class="planets-nav planet-10"><img src="./Planets/pluto.png" alt=""></div></div>
                 </div>
+                -->
+                <div class="solar-system-container" id="solar-system-container">
+                    <div class="planets-container pc-1">
+                        <div class="planets-nav planet-10"><img src="./Planets/pluto.png" alt=""></div>
+                        <div class="planets-nav planet-9"><img src="./Planets/neptune.png" alt=""></div>
+                        <div class="planets-nav planet-8"><img src="./Planets/uranus.png" alt=""></div>
+                        <div class="planets-nav planet-7"><img src="./Planets/saturn.png" alt=""></div>
+                        <div class="planets-nav planet-6"><img src="./Planets/jupiter.png" alt=""></div>
+                        <div class="planets-nav planet-5"><img src="./Planets/mars.png" alt=""></div>
+                        <div class="planets-nav planet-4"><img src="./Planets/earth.png" alt=""></div>
+                        <div class="planets-nav planet-3"><img src="./Planets/venus.png" alt=""></div>
+                        <div class="planets-nav planet-2"><img src="./Planets/mercury.png" alt=""></div>
+                        <div class="planets-nav planet-1"><img src="./Planets/sun.png" alt=""></div>
+                    </div>
+                </div>
+                <div class="details-frame" id="details-frame">
+                    
+                </div>
             </div>
         </div>
+        
         <div class="row position-fixed" style="bottom: 0;">
             <div class="col-lg-12 planet-titles-bg">
                 <div class="col-lg-8 mx-auto planet-titles-container">
-                    <div class="planet-titles">Sun</div>
-                    <div class="planet-titles">Mercury</div>
-                    <div class="planet-titles">Venus</div>
-                    <div class="planet-titles">Earth</div>
-                    <div class="planet-titles">Moon</div>
-                    <div class="planet-titles">Mars</div>
-                    <div class="planet-titles">Jupiter</div>
-                    <div class="planet-titles">Saturn</div>
-                    <div class="planet-titles">Uranus</div>
-                    <div class="planet-titles">Neptune</div>
-                    <div class="planet-titles">Pluto</div>
+                    <div class="planet-titles planet-title-1" onclick="details('')">Sun</div>
+                    <div class="planet-titles planet-title-2" onclick="details('')">Mercury</div>
+                    <div class="planet-titles planet-title-3" onclick="details('')">Venus</div>
+                    <div class="planet-titles planet-title-4" onclick="details('')">Earth</div>
+                    <div class="planet-titles planet-title-0" onclick="details('')">Moon</div>
+                    <div class="planet-titles planet-title-5" onclick="details('')">Mars</div>
+                    <div class="planet-titles planet-title-6" onclick="details('')">Jupiter</div>
+                    <div class="planet-titles planet-title-7" onclick="details('')">Saturn</div>
+                    <div class="planet-titles planet-title-8" onclick="details('')">Uranus</div>
+                    <div class="planet-titles planet-title-9" onclick="details('')">Neptune</div>
+                    <div class="planet-titles planet-title-10" onclick="details('')">Pluto</div>
                 </div>
             </div>
         </div>
     </div>
+    <script src="./index.js"></script>
 </body>
 </html>
