--- a/Static Html Lib/details pages/details.html
+++ b/Static Html Lib/details pages/details.html
@@ -9,6 +9,17 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="det.css">
+    <style>
+        body{
+    
+    background-image: url(background.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    border: solid rgb(12, 3, 61) 15px;
+    border-radius: 10px;
+}
+    </style>
     <title>Document</title>
 </head>
 <body>
@@ -22,7 +33,7 @@
                     <div class="detail-text-subtitle">
                         <h3>The Sun</h3>
                     </div>
-                    <div class="detail-text"><p> Sun is a 4.5 billion-year-old star – a hot glowing ball of hydrogen and helium at the center of our solar system. 
+                    <div class="detail-text"><p> The Sun is a 4.5 billion-year-old star – a hot glowing ball of hydrogen and helium at the center of our solar system. 
                         The Sun is about 150 million kilometers from Earth, and without its energy, life as we know it could not exist here on our home planet.</p>
                         <p>
                         The Sun is the largest object in our solar system. The Sun’s volume would need 1.3 million Earths to fill it. 
