--- a/Static Html Lib/szabolcs/Stardust/stardust.html
+++ b/Static Html Lib/szabolcs/Stardust/stardust.html
@@ -5,6 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="stardust.css">
+    <style>
+        body, html{
+                background-color: black;
+                width: 100%;
+                height: 100%;
+                overflow: hidden;
+                }
+    </style>
     <title>Stardust</title>
 </head>
 <body>
