--- a/Static Html Lib/szabolcs/Stardust/stardust.html
+++ b/Static Html Lib/szabolcs/Stardust/stardust.html
@@ -12,6 +12,14 @@
                 height: 100%;
                 overflow: hidden;
                 }
+        span{
+                position: absolute;
+                width: 5px;
+                height: 5px;
+                background-color: #fff;
+                
+                border-radius: 50%;
+}
     </style>
     <title>Stardust</title>
 </head>
