--- a/Static Html Lib/szabolcs/Stardust/stardust.html
+++ b/Static Html Lib/szabolcs/Stardust/stardust.html
@@ -14,10 +14,9 @@
                 }
         span{
                 position: absolute;
-                width: 5px;
-                height: 5px;
-                background-color: #fff;
-                border-radius: 50%;
+                background-position: center;
+                background-repeat: no-repeat;
+                background-size: contain;
 }
     </style>
     <title>Stardust</title>
